# Sigenerator

./: LICENSE  README.md  WORK_PLAN.md  analyze_log.txt  check_icons.dart  dart_analyze.txt  work_log.md
Sigenerator_qt/: CMakeLists.txt  README.md
Sigenerator_qt/core_assets/: README.md
Sigenerator_qt/core_assets/categories/metro_line/: abilities.json
Sigenerator_qt/core_assets/categories/metro_station/: abilities.json
Sigenerator_qt/core_assets/categories/road_sign/: abilities.json
Sigenerator_qt/core_assets/cities/guangzhou/: manifest.json
Sigenerator_qt/core_assets/cities/mtr/: manifest.json
Sigenerator_qt/core_assets/cities/shanghai/: manifest.json
Sigenerator_qt/core_assets/palettes/: colors.json
Sigenerator_qt/core_assets/tags/: tags.json
Sigenerator_qt/core_canvas_model/: README.md
Sigenerator_qt/core_canvas_model/rules/: export_rules.json  layout_rules.json
Sigenerator_qt/core_standards/metro_guide/: guangzhou.json  mtr.json  shanghai.json
Sigenerator_qt/core_standards/road_gb_5768_2_2022/: layout.json  templates.json  typography.json
Sigenerator_qt/src/: CanvasWidget.cpp  CanvasWidget.h  CoreRegistry.cpp  CoreRegistry.h  MainWindow.cpp  MainWindow.h  TemplateModels.h  main.cpp
Sigenerator_qt/src/domain/: BoardDocument.cpp  BoardDocument.h
Sigenerator_qt/src/ui/: IProjectEditor.h  MetroEditorWidget.cpp  MetroEditorWidget.h  MetroGuideEditorWidget.cpp  MetroGuideEditorWidget.h  RoadEditorWidget.cpp  RoadEditorWidget.h  TextBoardPreviewWidget.cpp  TextBoardPreviewWidget.h
docs/: metro_asset_audit.md
lib/models/: metro_models.dart  (+3 more)
(+13 files in other folders)
